crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__expr_matches_string_literal.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | where host matches \"pattern\"\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE regexp_matches("host", ?)
---
params:
  0: 'pattern'
