crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__field_filter_with_float_coercion.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"score:3.14\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "score" = ?
---
params:
  0: 3.14
