crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__fn_concat.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | let full = concat(host, \":\", service)\"#)"
---
WITH _s0 AS (
  SELECT *
  FROM read_parquet('/data/**/*.parquet', union_by_name=true)
)
SELECT COLUMNS(c -> translate(c, 'ABCDEFGHIJKLMNOPQRSTUVWXYZ', 'abcdefghijklmnopqrstuvwxyz') NOT IN ('full')), (CONCAT("host", ?, "service")) AS "full"
FROM "_s0"
---
params:
  0: ':'
