crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__fn_contains.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"* | where contains(message, \"error\")\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE CONTAINS("message", ?)
---
params:
  0: 'error'
